--- a/app/views/shops/informations/new.html.erb
+++ b/app/views/shops/informations/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="col-12">
     <h2><strong>お知らせ新規投稿</strong></h2><br>
-    <%= form_for(@information, url:shops_informations_path,method: :post) do |f| %>
+    <%= form_with(url:confirm_shops_informations_path, method: :get, data: {remote: false}) do |f| %>
     <div class="row">
       <div class="col-1">
         <h4><%= f.label :件名, class: 'control-label' %></h4>
@@ -14,17 +14,9 @@
       </div>
       <%= f.text_area :text, class: 'col-6 form-control',placeholder: "お客様へわかりやすく情報を共有しましょう。" %><br><br><br><br><br><br>
     </div><br>
-    <div class="row">
-      <div class="col-1">
-      </div>
-      <%= f.label :information_image, "画像を投稿", class: 'col-3 btn btn-secondary' %>
-      <%= f.attachment_field :information_image, style: "display: none;" %>
-    </div>
-    <div class="row">
-      <div class="col-1">
-      </div>
       <div class="col-6">
-        <%= f.submit "投稿",class: "col-3 btn btn-secondary" %>
+        <%= f.submit "確認画面へ進む",class: "col-3 btn btn-secondary" %>
+        <h5>確認画面で画像を選択できます。</h5>
       </div>
     </div>
     <div class="row">
@@ -37,3 +29,5 @@
     <% end %>
   </div>
 </div>
+
+
