--- a/app/views/admins/shops/show.html.erb
+++ b/app/views/admins/shops/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
       <div class="col-6">
-        <h2><strong>マイページ</strong></h2>
+        <h2><strong><%= @shop.name %>　店舗データ</strong></h2>
         <table class="table table-bordered">
           <tr class="shop-tr">
             <td>ID</td>
@@ -60,4 +60,5 @@
           <%= attachment_image_tag @shop, :shop_image, :fill, 250, 250, format: 'jpeg', fallback: "no_image.shop.jpg", size:"250x250" %>
         </div>
   </div>
+  <%= link_to "一覧へ", admins_shops_path, class:"btn btn-secondary" %><br><br>
 </div>
