--- a/app/views/admins/users/index.html.erb
+++ b/app/views/admins/users/index.html.erb
@@ -1,2 +1,21 @@
-<h1>Admins::Users#index</h1>
-<p>Find me in app/views/admins/users/index.html.erb</p>
+<table>
+	<tr>
+		<th>名前</th>
+		<th>電話番号</th>
+		<th>住所</th>
+		<th>会員状況</th>
+		<th></th>
+	</tr>
+   <% @users.each do |user| %>
+		<tr>
+			<td><%= user.name %></td>
+			<td>TEL:<%= user.phonenumber %></td>
+			<td><%= user.address %></td>
+			<td><%= link_to "show", admins_user_path(user.id) %></td>
+			<td><%= link_to "DELETE",admins_user_path(user.id), method: :delete, class: "destroy-btn", data: { confirm: '本当に消しますか？' } %></td>
+		</tr>
+    <% end %>
+</table>
+<div class="row">
+<%= link_to "トップへ戻る", admins_top_path, class: "top_list" %>
+</div>
