[edit]admin/shop/registrations.html.erb

--- a/app/views/admins/shops/index.html.erb
+++ b/app/views/admins/shops/index.html.erb
@@ -21,6 +21,9 @@
     <% end %>
 </table>
 <div class="row">
+<%= link_to "SHOP新規登録", new_shop_registration_path, class: "top_list" %>
+</div>
+<div class="row">
 <%= link_to "トップへ戻る", admins_top_path, class: "top_list" %>
 </div>
 
