[create] admin/information(MVC)

--- a/app/views/admins/shops/show.html.erb
+++ b/app/views/admins/shops/show.html.erb
@@ -60,5 +60,5 @@
           <%= attachment_image_tag @shop, :shop_image, :fill, 250, 250, format: 'jpeg', fallback: "no_image.shop.jpg", size:"250x250" %>
         </div>
   </div>
-  <%= link_to "一覧へ", admins_shops_paths, class:"btn btn-secondary" %><br><br>
+  <%= link_to "一覧へ", admins_shops_path, class:"btn btn-secondary" %><br><br>
 </div>
