--- a/app/views/users/inquiries/show.html.erb
+++ b/app/views/users/inquiries/show.html.erb
@@ -1,2 +1,13 @@
 <h1>Users::Inquiries#show</h1>
 <p>Find me in app/views/users/inquiries/show.html.erb</p>
+
+<div class="row">
+	<div class="inquiry_list_box col-12 col-md-6 offset-md-3">
+		<div class="inquiry-title">
+			<h3>タイトル[<%= @inquiry.title %>]</h3>
+		</div>
+		<div class="inquiry-title">
+			<h3>内容[<%= @inquiry.body %>]</h3>
+		</div>
+	</div>
+</div>
