--- a/app/views/users/inquiries/index.html.erb
+++ b/app/views/users/inquiries/index.html.erb
@@ -1,2 +1,19 @@
 <h1>Users::Inquiries#index</h1>
 <p>Find me in app/views/users/inquiries/index.html.erb</p>
+
+
+
+<div class="row">
+	<div class="item_list_box col-12 col-md-6 offset-md-3">
+	  <% @inquiries.each do |inquiry| %>
+	    <div class="item_content">
+	       <div class="">
+	         <div class="item_btn item_title">
+	           <%= link_to inquiry.title, users_inquiry_path(inquiry.id), class: "item_link" %>
+	         </div>
+
+	      </div>
+	    </div>
+	  <% end %>
+	</div>
+</div>
