--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,9 +25,9 @@
  }
 
 .simple-calendar .prev-month {
-	background-color: red;
+	background-color: gray;
 }
 
 .past {
-	background-color: red;
+	background-color: gray;
 }
