--- a/app/views/users/orders/_select_course.html.erb
+++ b/app/views/users/orders/_select_course.html.erb
@@ -52,7 +52,7 @@
     									<%= f.radio_button :payment, :false %>
     									<%= f.label :payment, "銀行振込" %>
     									<h6>※銀行振込の場合、振込手数料はお客様のご負担でお願いします</h6>
-    							<h5>お届け先：<%= f.text %></h5>
+    							<h5>お届け先：<%#= f.text %></h5>
     							t.string :delivery_address
 								</div>
 							</div>
