--- a/app/views/simple_calendar/_month_calendar.html.erb
+++ b/app/views/simple_calendar/_month_calendar.html.erb
@@ -47,7 +47,7 @@ function onDay(date){
     console.log(today);
     console.log(target);
     if ( parseInt(today) <= parseInt(target) ) {
-       $('#order_reserve_date').val(date);
+       $('#reserve_date').val(date);
     }
     else{
   alert('選択できません');
