--- a/app/views/users/courses/show.html.erb
+++ b/app/views/users/courses/show.html.erb
@@ -2,7 +2,7 @@
 <%= form_with url: users_orders_path ,local: true do |f| %>
 
 
-<%= f.time_select :order {|shop| [start_hour:open_time, end_hour:close_time]} %>
+<%#= f.time_select :order {|shop| [start_hour:open_time, end_hour:close_time]} %>
 
 <% end %>
 
