--- a/app/views/inquiries_mailer/admin_reply.html.erb
+++ b/app/views/inquiries_mailer/admin_reply.html.erb
@@ -1,4 +1,8 @@
- <h2><%= @shop.name %> 様</h2>
+<% if @user.id == nil %>
+  <h2><%= @shop.name %> 様</h2>
+<% else %>
+  <h2><%= @user.name %> 様</h2>
+<% end %>
 　<p>この度は、お問い合わせありがとうございました。<br>
 　以下がご質問の内容となっております。<br>
 　返信は2〜3営業日いただいております。<br>
@@ -8,3 +12,4 @@
   <p><%= @inquiry.body %></p>
 
   <p>今後ともCatering Tokyoをよろしくお願いいたします。</p>
+
