--- a/app/views/users/inquiries/index.html.erb
+++ b/app/views/users/inquiries/index.html.erb
@@ -1,19 +1,31 @@
 <h1>Users::Inquiries#index</h1>
 <p>Find me in app/views/users/inquiries/index.html.erb</p>
-
-
-
 <div class="row">
-	<div class="item_list_box col-12 col-md-6 offset-md-3">
-	  <% @inquiries.each do |inquiry| %>
-	    <div class="item_content">
+	<div class="inquiry_list_box col-12 col-md-6 offset-md-3">
+		<h1>サイト問い合わせ一覧</h1>
+	    <div class="inquiry_content">
 	       <div class="">
-	         <div class="item_btn item_title">
-	           <%= link_to inquiry.title, users_inquiry_path(inquiry.id), class: "item_link" %>
+	         <div class="inquiry_btn inquiry_title">
 	         </div>
-
+	         <table class="table table-bordered">
+	         	<thead>
+	         		<tr class="shop-tr">
+								<th>タイトル</th>
+								<th>問い合わせ日時</th>
+							</tr>
+						</thead>
+						<% @inquiries.each do |inquiry| %>
+							<tbody>
+		            <tr>
+									<td><%= link_to inquiry.title, users_inquiry_path(inquiry.id), class: "item_link" %></td>
+									<td><%= inquiry.created_at.strftime('%Y/%m/%d' ' %H:%M:%S') %></td>
+		            </tr>
+	        		</tbody>
+        		<% end %>
+						<tr class="shop-tr">
+						</tr>
+					</table>
 	      </div>
 	    </div>
-	  <% end %>
 	</div>
 </div>
