--- a/app/views/users/inquiries/new.html.erb
+++ b/app/views/users/inquiries/new.html.erb
@@ -1,21 +1,21 @@
 <div class="row">
 	<% if user_signed_in? %>
-    <%= form_with model: [:users, @inquiry], data: {remote: false} do |f| %>
-		<div class="col-12 col-md-6 offset-md-3">
-			<div class="row">
-				<div class="field col-md-12">
-	        <h4><%= f.label :タイトル %>:
-	        <%= f.text_field :title, class: "col-xs-5 item_title" %></h4>
-	      </div>
-	      <div class="col-md-12">
-	        <h4><%= f.label :内容 %>:</h4>
-	        <p><%= f.text_area :body, rows:'5', class: "form-control",placeholder: "ここに入力してください" %></p>
-	      </div class="review-star">
-	      <div class="col-md-12">
-	      	<%= f.submit "問い合わせ内容を送信", class: "btn btn-primary btn-lg btn-base-1 mt-20 pull-right" %>
-	      </div>
-	    </div>
-		</div>
+    <%= form_with model: @inquiry, url: users_inquiries_path, data: {remote: false} do |inquiry| %>
+			<div class="col-12 col-md-6 offset-md-3">
+				<div class="row">
+					<div class="field col-md-12">
+		        <h4><%= inquiry.label :タイトル %>:
+		        <%= inquiry.text_field :title, class: "col-xs-5 item_title" %></h4>
+		      </div>
+		      <div class="col-md-12">
+		        <h4><%= inquiry.label :内容 %>:</h4>
+		        <p><%= inquiry.text_area :body, rows:'5', class: "form-control",placeholder: "ここに入力してください" %></p>
+		      </div class="review-star">
+		      <div class="col-md-12">
+		      	<%= inquiry.submit "問い合わせ内容を送信", class: "btn btn-primary btn-lg btn-base-1 mt-20 pull-right" %>
+		      </div>
+		    </div>
+			</div>
 		<% end %>
 	<% end %>
 </div>
