--- a/app/views/shops/messages/index.html.erb
+++ b/app/views/shops/messages/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Shops::Messages#index</h1>
 <% @room.each do |room| %>
 <%= room.user.name %>
-<%= link_to "チャット", shops_room_path(room) %>
+<%= link_to "チャット", shops_room_path(room.user.id) %>
 <% end %>
 <p>Find me in app/views/shops/messages/index.html.erb</p>
