[create] user sigh-up terms

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,7 +54,7 @@
       <% else %>
       <ul>
         <li class="nav-list"><%= link_to "About", homes_about_path, class: "head-list" %></li>
-        <li class="nav-list"><%= link_to "会員登録はこちら", new_user_registration_path, class: "head-list" %></li>
+        <li class="nav-list"><%= link_to "会員登録はこちら", homes_terms_path, class: "head-list" %></li>
         <li class="nav-list"><%= link_to "会員の方はこちら", new_user_session_path, class: "head-list" %></li>
       </ul>
       <% end %>
