検索機能もう少し

--- a/app/views/users/homes/top.html.erb
+++ b/app/views/users/homes/top.html.erb
@@ -1,61 +1,15 @@
-<h1>Users::Homes#top</h1>
 
 
-<div class="search-form">
-  <%= form_with(scope: :search, url: users_path, method: :get, local: true) do |f| %>
-    <div class="field">
-      <%= f.label(:name, User.human_attribute_name(:name)) %>
-      <%= f.text_field :name, value: @search_params[:name] %>
-    </div>
+    <div class="search-form">
+      <%= form_with(url: search_path, method: :get, local: true) do |f| %>
+        <%= f.text_field :content %>
 
-    <div class="field">
-      <%= f.label(:gender, User.human_attribute_name(:gender)) %>
-      <%= f.collection_radio_buttons(:gender, User.genders, :first, :first) do |r| %>
-        <%= tag.div(class: 'form-check form-check-inline') do %>
-          <%= r.radio_button(checked: r.value == @search_params[:gender], class: 'form-check-input') + f.label(User.human_attribute_name("gender.#{r.text}"), class: 'form-check-label') %>
-        <% end %>
+        <%= f.select :model, [["お店", "shop"], ["コース", "course"]] %>
+
+        <%= f.select :price_gteq, [["２０００円", "2000"], ["２５００円", "2500"], ["３０００円", "3000"], ["３５００円", "3500"], ["４０００円", "4000"], ["４５００円", "4500"]], :prompt => "なんか選んでよ" %> 〜 <%= f.select :price_lteq, [["２０００円", "2000"], ["２５００円", "2500"], ["３０００円", "3000"], ["３５００円", "3500"], ["４０００円", "4000"], ["４５００円", "4500"], ["５０００円", "5000"], ["５５００円", "5500"], ["６０００円", "6000"]], :prompt => "上限なし" %>
+
+        <%= f.select :shop_genre_id, ShopGenre.all.map { |shopgenre| [shopgenre.name, shopgenre.id]}, :prompt => "なんか選んでよ" %>
+
+        <%= f.submit '検索', class: "btn btn-primary" %>
       <% end %>
     </div>
-
-    <div class="field">
-      <%= f.label(:birthday, User.human_attribute_name(:birthday)) %>
-      <%= f.date_field :birthday_from, value: @search_params[:birthday_from] %> ~ <%= f.date_field :birthday_to, value: @search_params[:birthday_to] %>
-    </div>
-
-    <div class="field">
-      <%= f.label(:prefecture_id, User.human_attribute_name(:prefecture_id)) %>
-      <%= f.collection_select(:prefecture_id, Prefecture.all, :id, :name, selected: @search_params[:prefecture_id], include_blank: t('helpers.select.include_blank')) %>
-    </div>
-
-    <div class="actions">
-      <%= f.submit(t('helpers.submit.search')) %>
-    </div>
-  <% end %>
-</div>
-
-
-<table>
-  <thead>
-  <tr>
-    <th>Name</th>
-    <th>Gender</th>
-    <th>Birthday</th>
-    <th>Prefecture</th>
-    <th colspan="3"></th>
-  </tr>
-  </thead>
-
-  <tbody>
-  <% @shops.each do |shop| %>
-    <tr>
-      <td><%= shop.name %></td>
-      <td><%= shop.gender %></td>
-      <td><%= shop.birthday %></td>
-      <td><%= shop.prefecture.name %></td>
-      <td><%= link_to 'Show', shop %></td>
-      <td><%= link_to 'Edit', edit_shop_path(shop) %></td>
-      <td><%= link_to 'Destroy', shop, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-    </tr>
-  <% end %>
-  </tbody>
-</table>
